--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "requirejs": "^2.3.6",
     "simple-peer": "^9.7.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
